minibutton alignment fix

--- a/src/components/MiniButton/MiniButton.styl
+++ b/src/components/MiniButton/MiniButton.styl
@@ -12,6 +12,7 @@
   border-color $black
   border-radius 3px
   background $white
+  vertical-align middle
   cursor pointer
 
   &.purple
